Reorder header options, align in center and fix buttons

--- a/_Amazon_Clone/amazon_clone/src/Components/Header/Header.css
+++ b/_Amazon_Clone/amazon_clone/src/Components/Header/Header.css
@@ -38,6 +38,7 @@
 .header__right {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .header__link {
