--- a/_Amazon_Clone/amazon_clone/src/Components/Product/product.css
+++ b/_Amazon_Clone/amazon_clone/src/Components/Product/product.css
@@ -4,7 +4,6 @@ button,
   border-color: #a88734 #9c7e31 #846a29;
   border: 1px solid;
   border-radius: 5px;
-  margin-bottom: 5px;
   cursor: pointer;
 }
 
