--- a/_Amazon_Clone/amazon_clone/src/Components/SubTotal/subTotal.css
+++ b/_Amazon_Clone/amazon_clone/src/Components/SubTotal/subTotal.css
@@ -1,16 +1,16 @@
-button, .subtotal > button {
+button,
+.subtotal > button {
   background-color: orange;
   border-color: #a88734 #9c7e31 #846a29;
   border: 1px solid;
   border-radius: 5px;
-  margin-bottom: 5px;
   cursor: pointer;
 }
 
 button:hover {
   color: white;
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .subtotal {
@@ -19,11 +19,11 @@ button:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 200px;
   height: 100px;
   padding: 20px;
@@ -37,8 +37,8 @@ button:hover {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .subtotal__gift > input {
