--- a/_Amazon_Clone/amazon_clone/src/Pages/OrderCheckout/OrderCheckout.css
+++ b/_Amazon_Clone/amazon_clone/src/Pages/OrderCheckout/OrderCheckout.css
@@ -26,7 +26,6 @@
 }
 
 .orderCheckout__container > form > h5 {
-  margin-bottom: 5px;
 }
 
 .orderCheckout__container > form > input {
